AppDriverManager, clean